# azure-a2a-main-2026

./: .env.example  .gitignore  Makefile  README.md  deploy-azure.ps1  deploy-frontend-light.sh  deploy-remote-agent.ps1  deploy-remote-agent.sh  docker-compose.yml  start.ps1  test_quickbooks_mcp.py
.github/workflows/: deploy-azure.yml
backend/: backend_production.py  start_websocket.py
backend/data/: agent_registry.json  schedule_run_history.json  scheduled_workflows.json  users.json  workflows.json
backend/hosts/data/: agent_registry.json
backend/service/: agent_registry.py
docs/: index.html
frontend/components/: agent-catalog.tsx  agent-network.tsx  chat-history-sidebar.tsx  chat-layout.tsx  chat-panel.tsx  connected-users.tsx  file-history.tsx  schedule-workflow-dialog.tsx  visual-workflow-designer.tsx
frontend/hooks/: use-voice-live.ts  use-voice-recording.tsx
frontend/lib/: scheduler-api.ts  websocket-client.ts
frontend_light/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
frontend_light/app/: globals.css  layout.tsx  page.tsx
frontend_light/components/: AgentCard.tsx  Dashboard.tsx  LoginForm.tsx  VoiceButton.tsx  WorkflowCard.tsx
frontend_light/hooks/: useVoiceRealtime.ts
frontend_light/lib/: api.ts
frontend_light/public/: manifest.json
remote_agents/azurefoundry_Deep_Search/: .env.example  __main__.py  foundry_agent.py  pyproject.toml
remote_agents/azurefoundry_QuickBooks/: foundry_agent.py
remote_agents/azurefoundry_twilio/: README.md  pyproject.toml
scripts/: setup-github-secrets.sh  start_remote_agents.sh
(+52 files in other folders)
